--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "homepage": "https://github.com/PH2M/logistic",
   "require": {
     "magento/product-community-edition": "~2.1.0|~2.2.0",
-    "firegento/fastsimpleimport": "~1.2.0"
+    "firegento/fastsimpleimport": "~1.2.0",
+    "firegento/extendedimport": "dev-master"
   },
   "type": "magento2-module",
   "license": "GPL-3.0",
@@ -20,6 +21,12 @@
     ],
     "psr-4": {
       "PH2M\\Logistic\\": ""
+    }
+  },
+  "repositories": {
+    "firegento_extendedimport2": {
+      "type": "vcs",
+      "url": "https://github.com/firegento/FireGento_ExtendedImport2"
     }
   }
 }
