--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Manage imports/exports",
   "homepage": "https://github.com/PH2M/logistic",
   "require": {
-    "magento/product-community-edition": "~2.1.0|~2.2.0",
+    "magento/product-community-edition": ">=2.1",
     "firegento/fastsimpleimport": "~1.2.0",
     "firegento/extendedimport": "dev-master"
   },
