--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "homepage": "https://github.com/PH2M/logistic",
   "require": {
     "magento/product-community-edition": ">=2.1",
-    "firegento/fastsimpleimport": "~1.3.1",
+    "firegento/fastsimpleimport": "^2.0.5",
     "firegento/extendedimport": "dev-main"
   },
   "type": "magento2-module",
